apps/gakhalmo-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gakhalmo-front
  namespace: gakhalmo
  labels:
    app: gakhalmo-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gakhalmo-front
  template:
    metadata:
      labels:
        app: gakhalmo-front
    spec:
      containers:
        - name: gakhalmo-front
          image: yny.ocir.io/axlgn2n9ijoa/gakhalmo/front:prod-1
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
      imagePullSecrets:
        - name: ocir-secret
