apps/gakhalmo-front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gakhalmo-front
  namespace: gakhalmo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gakhalmo.klr.kr
      secretName: gakhalmo-klr-kr-tls
  rules:
    - host: gakhalmo.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gakhalmo-front
                port:
                  number: 3000
